--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -105,31 +105,32 @@ header img {
   width: 50px;
 }
 
-header nav {
-  background: $primary-color;
-  padding: 10px;
+header {
+  nav {
+    background: $primary-color;
+    padding: 10px;
+
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+    }  
+    li {
+      display: inline-block;
+      a {
+        display: inline-block;
+        padding: 5px 10px;
+        text-transform: uppercase;
+        color: $white;
+      }
+    }
+  img {
+    width: 50px;
+  }
+
+ }
 }
 
-header nav ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-header nav li {
-  display: inline-block;
-}
-
-header nav li a {
-  display: inline-block;
-  padding: 5px 10px;
-  text-transform: uppercase;
-  color: $white;
-}
-
-header nav img {
-  width: 50px;
-}
 
 .hero {
   position: relative;
@@ -142,8 +143,8 @@ header nav img {
   content: '';
   width: 100%;
   height: 600px;
-  background: -webkit-gradient(linear, left top, right top, from(#353f6f), to(rgba(189, 27, 27, 0.74))), url("../../src/images/iphone-bg.jpg") no-repeat center fixed/cover;
-  background: linear-gradient(to right, #353f6f, rgba(189, 27, 27, 0.74)), url("../../src/images/iphone-bg.jpg") no-repeat center fixed/cover;
+  background: -webkit-gradient(linear, left top, right top, from($primary-color), to(rgba(189, 27, 27, 0.74))), url("../../src/images/iphone-bg.jpg") no-repeat center fixed/cover;
+  background: linear-gradient(to right, $primary-color, rgba(189, 27, 27, 0.74)), url("../../src/images/iphone-bg.jpg") no-repeat center fixed/cover;
   z-index: -1000;
   top: 0;
   left: 0;
@@ -153,35 +154,37 @@ header nav img {
           transform-origin: left bottom;
 }
 
-.hero video {
+.hero {
+  video {
   width: 100%;
   -webkit-box-shadow: 0 0 24px rgba(0, 0, 0, 0.4);
           box-shadow: 0 0 24px rgba(0, 0, 0, 0.4);
-}
+  }
 
-.hero .hero-caption {
-  padding: 20px 20px;
-}
+  & .hero-caption {
+    padding: 20px 20px;
+  }
 
-.hero .title {
-  font-size: 28px;
-}
+  & .title {
+    font-size: 28px;
+  }
 
-.hero .subtitle {
-  font-size: 18px;
-  font-weight: 400;
-}
+  & .subtitle {
+    font-size: 18px;
+    font-weight: 400;
+  }
 
-.hero .btn {
-  margin-top: 30px;
-}
+  & .btn {
+    margin-top: 30px;
+  }
 
-.hero hr {
-  border: 0;
-  border-top: 4px solid $secondary-color;
-  margin-left: 0;
-  margin-top: 10px;
-  width: 30px;
+  hr {
+    border: 0;
+    border-top: 4px solid $secondary-color;
+    margin-left: 0;
+    margin-top: 10px;
+    width: 30px;
+  }
 }
 
 #contact-form {
@@ -192,50 +195,49 @@ header nav img {
   background-position: center;
   padding: 30px 0;
   color: $white;
-}
 
-#contact-form hr {
-  border: 0;
-  border-top: 4px solid $white;
-  margin-left: 0;
-  margin-top: 10px;
-  width: 60px;
-}
+  hr {
+    border: 0;
+    border-top: 4px solid $white;
+    margin-left: 0;
+    margin-top: 10px;
+    width: 60px;
+  }
+  & .submit {
+    text-align: center;
+  }
+  
+  & .form-group {
+    padding: 0 0 10px;
+  }
+  
+  #contact-form input, #contact-form textarea, #contact-form select {
+    display: block;
+    width: 100%;
+    border: 1px solid  $white;
+  }
+  
+   label {
+    display: block;
+    padding-bottom: 5px;
+  }
+  
+   input {
+    height: 40px;
+    border-radius: 3px;
+    padding: 0 15px;
+  }
+  
+   textarea {
+    border-radius: 3px;
+    padding: 15px;
+  }
+  
+   form {
+    margin: 0 -15px;
+  }
 
-#contact-form .submit {
-  text-align: center;
 }
-
-#contact-form .form-group {
-  padding: 0 0 10px;
-}
-
-#contact-form input, #contact-form textarea, #contact-form select {
-  display: block;
-  width: 100%;
-  border: 1px solid  #D8D8D8;
-}
-
-#contact-form label {
-  display: block;
-  padding-bottom: 5px;
-}
-
-#contact-form input {
-  height: 40px;
-  border-radius: 3px;
-  padding: 0 15px;
-}
-
-#contact-form textarea {
-  border-radius: 3px;
-  padding: 15px;
-}
-
-#contact-form form {
-  margin: 0 -15px;
-}
-
 #contact-form .form-wrapper .message, #contact-form .form-wrapper .info {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -254,23 +256,20 @@ header nav img {
 footer {
   text-align: center;
   padding: 15px;
+
+    &.main {
+      img {
+      width: 24px;
+     }
+      a {
+      display: inline-block;
+      padding: 5px 10px;
+     }
+      p {
+      font-size: 1.2rem;
+     } 
+    }  
 }
-
-footer.main img {
-  width: 24px;
-}
-
-footer.main a {
-  display: inline-block;
-  padding: 5px 10px;
-}
-
-footer.main p {
-  font-size: 1.2rem;
-}
-
-
-
 
 @media only screen and (min-width: 768px) {
   .form-wrapper {
@@ -315,13 +314,15 @@ footer.main p {
     -webkit-transition: background .3s;
     transition: background .3s;
   }
-  nav li a:hover {
-    background: $primary-color;
-    border-radius: 3px;
-  }
-  nav li a:focus {
-    background: $secondary-color;
-    border-radius: 3px;
+  nav li a {
+    &:hover {
+      background: $primary-color;
+      border-radius: 3px;
+    }
+    &:focus {
+      background: $secondary-color;
+      border-radius: 3px;
+    }
   }
 }
 
